# sp1

examples/bls-sig/program/src/: main.rs
examples/bls-sig/script/: Cargo.toml
examples/bls-sig/script/src/: generate_sigs.rs
