[workspace]
[package]
version = "0.1.0"
name = "bls12381-script"
edition = "2021"

[dependencies]
sp1-sdk = { path = "../../../../sp1/crates/sdk" }
lazy_static = "1.5.0"

[build-dependencies]
sp1-helper = { path = "../../../../sp1/crates/helper" }

[features]
cuda = ["sp1-sdk/cuda"]

[[bin]]
name = "generate_sigs"
path = "script/src/generate_sigs.rs"